Issue #25. Toggle visibility from dashboard.

--- a/src/resources/assets/sass/projects/dashboard.sass
+++ b/src/resources/assets/sass/projects/dashboard.sass
@@ -39,6 +39,7 @@ $infoSpace: 10px
 
     +ele(visibility)
         margin-bottom: $infoSpace
+        cursor: pointer
 
     +ele(wrapper)
         display: block
